--- a/email.html
+++ b/email.html
@@ -345,24 +345,16 @@
                                                         New enquiry received from
                                                         <strong>{{$trigger.payload.name}}</strong>
                                                     </p>
-                                                    <h2
-                                                        style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                                        <strong>Service:</strong> <br />{{$trigger.payload.service}}
-                                                    </h2>
-                                                    <h2
+        
+                                                    <p
                                                         style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
                                                         <strong>Message:<br /></strong>{{$trigger.payload.message}}
-                                                    </h2>
-                                                    <h2
+                                                    </p>
+                                                    <p
                                                         style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
                                                         <strong>Contact details:</strong><br />Phone:
                                                         {{$trigger.payload.phone}}<br />Email:&nbsp;{{$trigger.payload.email}}
-                                                    </h2>
-                                                    <h3
-                                                        style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; margin-bottom: 15px;">
-                                                        <strong>How did they hear about
-                                                            us?</strong><br />{{$trigger.payload.referral}}
-                                                    </h3>
+                                                    </p>
                                                 </td>
                                             </tr>
                                         </tbody>
@@ -383,7 +375,7 @@
                                 <tr>
                                     <td class="content-block powered-by"
                                         style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; color: #999999; font-size: 12px; text-align: center;"
-                                        align="center" valign="top">Lancasters Solicitors</td>
+                                        align="center" valign="top">EMAIL FOOTER</td>
                                 </tr>
                             </tbody>
                         </table>
